use swagger-ui docker
